--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,12 @@
         <version>2.7.12</version>
         <scope>provided</scope>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>17.0.6</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
