--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,14 @@
         <artifactId>org.eclipse.persistence.core</artifactId>
         <version>2.7.12</version>
     </dependency>
-    <dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>19.0.2.1</version>
+        </dependency>
+
+        <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.asm</artifactId>
         <version>9.4.0</version>
